--- a/test/build.gradle
+++ b/test/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.consumerapp"
+        applicationId "com.example.test"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -34,11 +34,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
-    implementation 'androidx.preference:preference:1.1.1'
 }
