--- a/test/src/main/AndroidManifest.xml
+++ b/test/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.consumerapp">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.example.githubusersapp.READ_DATABASE" />
-    <uses-permission android:name="com.example.githubusersapp.WRITE_DATABASE" />
+    package="com.example.test">
 
     <application
         android:allowBackup="true"
@@ -13,16 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".view.activity.DetailActivity"
-            android:parentActivityName=".view.activity.MainActivity" />
     </application>
 
 </manifest>
